--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,17 @@ dependencies:
   google_generative_ai: ^0.4.3
   flutter_markdown: ^0.7.2+1
   url_launcher: ^6.0.20
-  speech_to_text: ^6.6.2
+  speech_to_text:
   flutter_dotenv: ^5.1.0
   intl: ^0.19.0
   animations: ^2.0.11
   google_search_api: ^0.0.3
   google_maps_flutter: ^2.2.8
+  location: ^6.0.2
+  geocode: ^1.0.3
+  tuple: ^2.0.2
+  flutter_polyline_points: ^2.0.1
+  neom_maps_services: ^1.0.3
 
 dev_dependencies:
   flutter_test:
