--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   url_launcher: ^6.0.20
   speech_to_text:
   flutter_dotenv: ^5.1.0
+  http: ^1.2.1
   intl: ^0.19.0
   animations: ^2.0.11
   google_search_api: ^0.0.3
