--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,13 @@ dependencies:
   neom_maps_services: ^1.0.3
   youtube_player_flutter: ^9.0.1
   googleapis: ^13.2.0
+  google_sign_in: ^6.2.1
+  extension_google_sign_in_as_googleapis_auth: ^2.0.12
+  googleapis_auth: ^1.6.0
+  path_provider: ^2.1.3
+  path: ^1.9.0
+  mime: ^1.0.5
+  timezone: ^0.9.3
 
 dev_dependencies:
   flutter_test:
