--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,9 @@ dependencies:
   path: ^1.9.0
   mime: ^1.0.5
   timezone: ^0.9.3
+  file_picker: ^8.0.5
+  settings_ui: ^2.0.2
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
