--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   file_picker: ^8.0.5
   settings_ui: ^2.0.2
   provider: ^6.1.2
+  shimmer: ^3.0.0
+  getwidget: ^4.0.0
 
 dev_dependencies:
   flutter_test:
@@ -107,6 +109,7 @@ flutter:
     - assets/icons/12/
     - assets/icons/13/
     - assets/icons/14/
+    - assets/backgrounds/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
