--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   shimmer: ^3.0.0
   getwidget: ^4.0.0
   shared_preferences: ^2.2.3
+  firebase_core: ^3.1.1
+  google_maps_flutter_ios: ^2.8.1
+  firebase_auth: ^5.1.1
 
 dev_dependencies:
   flutter_test:
