--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   extension_google_sign_in_as_googleapis_auth: ^2.0.12
   googleapis_auth: ^1.6.0
   path_provider: ^2.1.3
+  camera: ^0.11.0+1
   path: ^1.9.0
   mime: ^1.0.5
   timezone: ^0.9.3
@@ -70,6 +71,8 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   flutter_signin_button: ^2.0.0
+  cloud_text_to_speech: ^1.1.3
+  audioplayers: ^6.0.0
 
 dev_dependencies:
   flutter_test:
