--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,10 +40,10 @@ dependencies:
   google_generative_ai: ^0.4.3
   flutter_markdown: ^0.7.2+1
   url_launcher: ^6.0.20
-  speech_to_text:
   flutter_dotenv: ^5.1.0
   http: ^1.2.1
   intl: ^0.19.0
+  intl_generator: ^0.4.1
   animations: ^2.0.11
   google_search_api: ^0.0.3
   google_maps_flutter: ^2.2.8
@@ -59,6 +61,7 @@ dependencies:
   camera: ^0.11.0+1
   path: ^1.9.0
   mime: ^1.0.5
+  record: ^5.1.2
   timezone: ^0.9.3
   file_picker: ^8.0.5
   settings_ui: ^2.0.2
@@ -71,6 +74,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   flutter_signin_button: ^2.0.0
+  deepgram_speech_to_text: ^2.2.2
   cloud_text_to_speech: ^1.1.3
   audioplayers: ^6.0.0
 
