--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   intl: ^0.19.0
   intl_generator: ^0.4.1
   animations: ^2.0.11
-  google_search_api: ^0.0.3
+  duckduckgo_search: ^0.1.3
   google_maps_flutter: ^2.2.8
   location: ^6.0.2
   geocode: ^1.0.3
@@ -76,7 +76,9 @@ dependencies:
   flutter_signin_button: ^2.0.0
   deepgram_speech_to_text: ^2.2.2
   cloud_text_to_speech: ^1.1.3
+  #azure_speech_recognition_null_safety: ^0.9.5
   audioplayers: ^6.0.0
+  chat_gpt_sdk: ^3.0.9
 
 dev_dependencies:
   flutter_test:
