support Cantonese. add save photo feature.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,6 +79,8 @@ dependencies:
   #azure_speech_recognition_null_safety: ^0.9.5
   audioplayers: ^6.0.0
   chat_gpt_sdk: ^3.0.9
+  image_gallery_saver: ^2.0.3
+  qonversion_flutter: ^9.0.1
 
 dev_dependencies:
   flutter_test:
