--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="Keras Chatbot"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        android:requestLegacyExternalStorage="true"
         <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="YOUR KEY HERE"/>
         <activity
