--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,7 @@ dependencies:
   google_maps_flutter_ios: ^2.8.1
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
+  firebase_database: ^11.0.3
   flutter_signin_button: ^2.0.0
   deepgram_speech_to_text: ^2.2.2
   cloud_text_to_speech: ^1.1.3
@@ -81,6 +82,7 @@ dependencies:
   chat_gpt_sdk: ^3.0.9
   image_gallery_saver: ^2.0.3
   qonversion_flutter: ^9.0.1
+  android_id: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -127,6 +129,8 @@ flutter:
     - assets/icons/13/
     - assets/icons/14/
     - assets/backgrounds/
+    - assets/streamer/
+    - assets/docs/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
