--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   firebase_auth: ^5.1.1
   cloud_firestore: ^5.0.2
   firebase_database: ^11.0.3
+  firebase_crashlytics: ^4.0.4
   firebase_remote_config: ^5.0.3
   flutter_signin_button: ^2.0.0
   deepgram_speech_to_text: ^2.2.2
@@ -88,6 +89,7 @@ dependencies:
   firebase_app_check: ^0.3.0+3
   flutter_email_sender: ^6.0.3
   cloud_functions: ^5.0.4
+  logger: ^2.4.0
 
 dev_dependencies:
   flutter_test:
