--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,6 +89,7 @@ dependencies:
   firebase_app_check: ^0.3.0+3
   flutter_email_sender: ^6.0.3
   cloud_functions: ^5.0.4
+  device_info_plus: ^10.1.1
   logger: ^2.4.0
 
 dev_dependencies:
