--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.6
+  #cupertino_icons: ^1.0.6
   google_generative_ai: ^0.4.3
   flutter_markdown: ^0.7.2+1
   url_launcher: ^6.0.20
@@ -45,7 +45,7 @@ dependencies:
   intl: ^0.19.0
   intl_generator: ^0.4.1
   animations: ^2.0.11
-  duckduckgo_search: ^0.1.3
+  #duckduckgo_search: ^0.1.3
   google_maps_flutter: ^2.2.8
   location: ^6.0.2
   geocode: ^1.0.3
@@ -66,7 +66,7 @@ dependencies:
   file_picker: ^8.0.5
   settings_ui: ^2.0.2
   provider: ^6.1.2
-  shimmer: ^3.0.0
+  #shimmer: ^3.0.0
   getwidget: ^4.0.0
   shared_preferences: ^2.2.3
   firebase_core: ^3.1.1
@@ -123,19 +123,11 @@ flutter:
     - .env
     - config/config.json
     - assets/log-imgs/
-    - assets/icons/1/
     - assets/icons/2/
     - assets/icons/3/
     - assets/icons/4/
-    - assets/icons/5/
-    - assets/icons/6/
-    - assets/icons/7/
-    - assets/icons/8/
     - assets/icons/9/
-    - assets/icons/10/
     - assets/icons/11/
-    - assets/icons/12/
-    - assets/icons/13/
     - assets/icons/14/
     - assets/backgrounds/
     - assets/bk-thumbnail/
