--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  #cupertino_icons: ^1.0.6
+  cupertino_icons: ^1.0.6
   google_generative_ai: ^0.4.3
   flutter_markdown: ^0.7.2+1
   url_launcher: ^6.0.20
@@ -76,6 +76,9 @@ dependencies:
   firebase_database: ^11.0.3
   firebase_crashlytics: ^4.0.4
   firebase_remote_config: ^5.0.3
+  firebase_messaging: ^15.0.4
+  firebase_in_app_messaging: ^0.8.0+4
+  flutter_local_notifications: ^17.2.1+2
   flutter_signin_button: ^2.0.0
   deepgram_speech_to_text: ^2.2.2
   cloud_text_to_speech: ^1.1.3
